# fp-lab3

./: README.md  dune-project  fp-lab3.opam
.github/workflows/: actions.yaml
lib/: dune
lib/interpolations/: dune  interpolations.ml  interpolations.mli
lib/io/: dune  io.ml  io.mli
lib/types/: dune  types.ml
test/: dune  test_fp_lab3.ml
