(lang dune 3.20)

(name fp-lab3)

(generate_opam_files true)

(package
 (name fp-lab3)
 (synopsis "A short synopsis")
 (description "A longer description")
 (depends
  ocaml
  dune
  alcotest))

; See the complete stanza docs at https://dune.readthedocs.io/en/stable/reference/dune-project/index.html
